- team server startup verifies default host is an IPv4 address.
- Prompt for default address is now more aggressive and continues to
  ask until an address is put in. If a user hit cancel on this dialog,
  threads to poll the database never get started. Bad day, for sure.
- Armitage now sends a keep-alive every 1-2mins over an idle team 
  server connection to combat disconnection by a NAT device

Cortana Updates (for scripters)
--------
- &credential_add, &credential_delete use Metasploit 4.10 conventions
- name field for hosts is now available.

18 Aug 14 (tested against msf git revision: 55ef5dd484)
---------
- Added hard-coded database.yml path as fallback for Kali users
- Updated internal db.creds/db.creds2 calls to pull from new creds
  model in database.
- [meterpreter] -> Access -> Dump Hashes -> wdigest uses sso post 
  module now. New creds model makes this better.
- Added Import option to View -> Credentials dialog.

15 Jul 14 (tested against msf git revision: 55ef5dd484)
---------
- Command Shell experience on Windows Meterpreter is much better now
- Java Meterpreter may now interact with a bash shell
- Removed [host] -> Meterpreter -> Access -> Migrate Now! menu item
- Ctrl+Escape temporarily drops the timeout times for Meterpreter 
  commands to 5s, across the board. If a Meterpreter session appears
  unresponsive, try this to force any hung commands to timeout
- Armitage now warns when a team server is non-responsive by making
  its server button purple. When the server is responsive again, the 
  button will turn its normal color again. This requires that you're
  connected to multiple team servers.
- Windows EXE launcher for Armitage now finds 64-bit Java.

15 May 14 (tested against msf git revision: 0a4c10876d)
---------
- Worked around invisible text selection bug with latest Java on Kali

23 Apr 14 (tested against msf git revision: 0a4c10876d)
---------
- Added Ctrl+L to quickly add an entry to timeline.[xml|tsv] (exported 